--- a/detection/component_util/pyproject.toml
+++ b/detection/component_util/pyproject.toml
@@ -5,11 +5,11 @@
 # under contract, and is subject to the Rights in Data-General Clause       #
 # 52.227-14, Alt. IV (DEC 2007).                                            #
 #                                                                           #
-# Copyright 2021 The MITRE Corporation. All Rights Reserved.                #
+# Copyright 2022 The MITRE Corporation. All Rights Reserved.                #
 #############################################################################
 
 #############################################################################
-# Copyright 2021 The MITRE Corporation                                      #
+# Copyright 2022 The MITRE Corporation                                      #
 #                                                                           #
 # Licensed under the Apache License, Version 2.0 (the "License");           #
 # you may not use this file except in compliance with the License.          #
@@ -24,21 +24,6 @@
 # limitations under the License.                                            #
 #############################################################################
 
-
-import os
-import setuptools
-
-os.chdir(os.path.dirname(__file__))
-
-setuptools.setup(
-    name='mpf_component_util',
-    description='OpenMPF Python Component Utilities',
-    version='6.3',
-    packages=setuptools.find_packages(exclude=('*test*',)),
-    install_requires=(
-        'mpf_component_api>=6.3',
-        'opencv-python>=4.4.0',
-        'pydub'
-    ),
-    test_suite='tests',
-)
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
